--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"start": "npx if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
 		"start:prod": "node server.js",
 		"start:dev": "npx concurrently \"npx nodemon --ignore 'client/*'\" \"npm run client\"",
-		"client": "cd client && npm run start"
+		"client": "cd client && npm run start",
+		"heroku-postbuild": "npm run build"
 	},
 	"keywords": [],
 	"author": "",
